// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Talent default 1`] = `
.c1 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  position: relative;
  cursor: default;
  font-size: 6px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid;
  padding: 4px;
  padding-top: 6px;
  border-radius: 3px;
  font-weight: 700;
  text-transform: uppercase;
  color: rgb(234,242,246);
  background-color: rgb(0,130,155);
  border-color: rgb(0,130,155);
}

.c1 > input {
  position: absolute !important;
  opacity: 0 !important;
  height: 0 !important;
  width: 0 !important;
}

.c0 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 12px;
  padding: 12px;
}

.c0 > div {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 h4,
.c0 p {
  margin: 0;
  color: rgb(0,130,155);
}

.c0 p,
.c0 textarea {
  text-align: justify;
}

.c0 h4 {
  text-shadow: 1px 1px rgb(234,242,246);
}

.c0 h4:nth-child(2) {
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
}

.c0 h4:nth-child(3) {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 p > span {
  font-family: "GenesysSymbols",Times New Roman,serif;
  color: rgb(0,0,0);
}

.c0 p > span[type=boost] {
  color: rgb(167,218,243);
}

.c0 p > span[type=ability] {
  color: rgb(78,171,83);
}

.c0 p > span[type=proficiency] {
  color: rgb(255,240,61);
}

.c0 p > span[type=difficulty] {
  color: rgb(81,42,124);
}

.c0 p > span[type=challenge] {
  color: rgb(116,24,26);
}

.c0 input,
.c0 textarea {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  border-radius: 5px;
  padding: 10px;
  color: rgb(0,130,155);
  font-size: 13px;
  width: 100%;
}

.c0 input::-webkit-input-placeholder,
.c0 textarea::-webkit-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c0 input::-moz-placeholder,
.c0 textarea::-moz-placeholder {
  color: rgba(0,130,155,0.7);
}

.c0 input:-ms-input-placeholder,
.c0 textarea:-ms-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c0 input::placeholder,
.c0 textarea::placeholder {
  color: rgba(0,130,155,0.7);
}

.c0 input:disabled,
.c0 textarea:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0 textarea {
  width: 100%;
  height: 5em;
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c0 {
    grid-template-columns: 4fr 3fr 2fr;
  }

  .c0 p,
  .c0 label[for="notes"],
  .c0 label[for="description"] {
    grid-column: 1/4;
  }
}

<div
  class="c0"
  data-testid="talent-combat_medicine"
>
  <h4
    data-testid="talent-combat_medicine-name"
  >
    Combat Medicine
  </h4>
  <h4
    data-testid="talent-combat_medicine-activation"
  >
    Active (Incidental)
  </h4>
  <label
    class="c1"
    data-testid="talent-combat_medicine-ranked"
    disabled=""
    name="talents.combat_medicine.ranked"
  >
    <input
      disabled=""
      name="talents.combat_medicine.ranked"
      type="checkbox"
    />
    <span>
      ranked
    </span>
  </label>
  <p
    data-testid="talent-combat_medicine-description"
  >
    Before making a Medicine check, your character may use this talent to add 
    <span
      type="success"
    >
      s
    </span>
     equal to their ranks in Combat Medicine to the results. After the check is resolved, the target suffers 2 strain for each rank your character has in Combat Medicine.
  </p>
</div>
`;

exports[`Storyshots Components/Talent editing 1`] = `
.c0 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 12px;
  padding: 12px;
}

.c0 > div {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 h4,
.c0 p {
  margin: 0;
  color: rgb(0,130,155);
}

.c0 p,
.c0 textarea {
  text-align: justify;
}

.c0 h4 {
  text-shadow: 1px 1px rgb(234,242,246);
}

.c0 h4:nth-child(2) {
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
}

.c0 h4:nth-child(3) {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 p > span {
  font-family: "GenesysSymbols",Times New Roman,serif;
  color: rgb(0,0,0);
}

.c0 p > span[type=boost] {
  color: rgb(167,218,243);
}

.c0 p > span[type=ability] {
  color: rgb(78,171,83);
}

.c0 p > span[type=proficiency] {
  color: rgb(255,240,61);
}

.c0 p > span[type=difficulty] {
  color: rgb(81,42,124);
}

.c0 p > span[type=challenge] {
  color: rgb(116,24,26);
}

.c0 input,
.c0 textarea {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  border-radius: 5px;
  padding: 10px;
  color: rgb(0,130,155);
  font-size: 13px;
  width: 100%;
}

.c0 input::-webkit-input-placeholder,
.c0 textarea::-webkit-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c0 input::-moz-placeholder,
.c0 textarea::-moz-placeholder {
  color: rgba(0,130,155,0.7);
}

.c0 input:-ms-input-placeholder,
.c0 textarea:-ms-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c0 input::placeholder,
.c0 textarea::placeholder {
  color: rgba(0,130,155,0.7);
}

.c0 input:disabled,
.c0 textarea:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0 textarea {
  width: 100%;
  height: 5em;
}

.c1 {
  background: transparent;
  border: none;
  color: rgb(242,143,34);
  font-size: 15px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin: 0 6px;
}

.c1:disabled {
  color: rgb(255,244,233);
  cursor: not-allowed;
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c0 {
    grid-template-columns: 4fr 3fr 2fr;
  }

  .c0 p,
  .c0 label[for="notes"],
  .c0 label[for="description"] {
    grid-column: 1/4;
  }
}

<div
  class="c0"
  data-testid="talent-dedication"
>
  <h4
    data-testid="talent-dedication-name"
  >
    Dedication
  </h4>
  <h4
    data-testid="talent-dedication-activation"
  >
    Passive
  </h4>
  <h4
    data-testid="talent-dedication-rank"
  >
    Rank:
     
    <button
      class="c1"
      data-testid="decrease-dedication-rank"
      disabled=""
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 13H5v-2h14v2z"
        />
      </svg>
    </button>
    2
    <button
      class="c1"
      data-testid="increase-dedication-rank"
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
    </button>
  </h4>
  <p
    data-testid="talent-dedication-description"
  >
    Each rank of Dedication increases one of your character's characteristics by one. This talent cannot increase a characteristic above 5. You cannot increase the same characteristic with Dedication twice.
  </p>
  <label
    for="notes"
  >
    <textarea
      data-testid="talent-dedication-notes"
      id="notes"
      name="notes"
      placeholder="Add notes"
    >
      Brawl
Cunning
    </textarea>
  </label>
</div>
`;

exports[`Storyshots Components/Talent new 1`] = `
.c3 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  position: relative;
  cursor: pointer;
  font-size: 6px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid;
  padding: 4px;
  padding-top: 6px;
  border-radius: 3px;
  font-weight: 700;
  text-transform: uppercase;
  color: rgb(234,242,246);
  background-color: rgb(0,130,155);
  border-color: rgb(0,130,155);
}

.c3 > input {
  position: absolute !important;
  opacity: 0 !important;
  height: 0 !important;
  width: 0 !important;
}

.c1 {
  font-family: "Monkirta",Helvetica,sans-serif;
  text-transform: uppercase;
  width: 100%;
}

.c1 .activation__value-container,
.c1 .activation__indicators {
  background-color: transparent;
  color: rgb(0,130,155);
  cursor: pointer;
}

.c1 .activation__single-value {
  color: rgb(0,130,155);
}

.c1 .activation__indicator-separator {
  background-color: rgb(0,130,155);
}

.c1 .activation__dropdown-indicator > svg {
  fill: rgb(0,130,155);
}

.c1 .activation__control,
.c1 .activation__menu {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  padding: 0;
  color: rgb(0,130,155);
}

.c1 .activation__control:hover,
.c1 .activation__menu:hover {
  border-color: rgb(65,178,180);
}

.c1 .activation__option {
  background-color: transparent;
  cursor: pointer;
}

.c1 .activation__option:hover {
  background-color: rgb(0,130,155);
  color: rgb(234,242,246);
}

.c1 .activation__option--is-selected {
  background-color: rgb(0,130,155);
  color: rgb(234,242,246);
}

.c1 .activation__option--is-selected:hover {
  background-color: rgb(0,130,155);
}

.c1 .activation__control--is-disabled {
  opacity: 0.7;
}

.c2 {
  font-family: "Monkirta",Helvetica,sans-serif;
  text-transform: uppercase;
  width: 100%;
}

.c2 .tier__value-container,
.c2 .tier__indicators {
  background-color: transparent;
  color: rgb(0,130,155);
  cursor: pointer;
}

.c2 .tier__single-value {
  color: rgb(0,130,155);
}

.c2 .tier__indicator-separator {
  background-color: rgb(0,130,155);
}

.c2 .tier__dropdown-indicator > svg {
  fill: rgb(0,130,155);
}

.c2 .tier__control,
.c2 .tier__menu {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  padding: 0;
  color: rgb(0,130,155);
}

.c2 .tier__control:hover,
.c2 .tier__menu:hover {
  border-color: rgb(65,178,180);
}

.c2 .tier__option {
  background-color: transparent;
  cursor: pointer;
}

.c2 .tier__option:hover {
  background-color: rgb(0,130,155);
  color: rgb(234,242,246);
}

.c2 .tier__option--is-selected {
  background-color: rgb(0,130,155);
  color: rgb(234,242,246);
}

.c2 .tier__option--is-selected:hover {
  background-color: rgb(0,130,155);
}

.c2 .tier__control--is-disabled {
  opacity: 0.7;
}

.c0 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 12px;
  padding: 12px;
}

.c0 > div {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 h4,
.c0 p {
  margin: 0;
  color: rgb(0,130,155);
}

.c0 p,
.c0 textarea {
  text-align: justify;
}

.c0 h4 {
  text-shadow: 1px 1px rgb(234,242,246);
}

.c0 h4:nth-child(2) {
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
}

.c0 h4:nth-child(3) {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 p > span {
  font-family: "GenesysSymbols",Times New Roman,serif;
  color: rgb(0,0,0);
}

.c0 p > span[type=boost] {
  color: rgb(167,218,243);
}

.c0 p > span[type=ability] {
  color: rgb(78,171,83);
}

.c0 p > span[type=proficiency] {
  color: rgb(255,240,61);
}

.c0 p > span[type=difficulty] {
  color: rgb(81,42,124);
}

.c0 p > span[type=challenge] {
  color: rgb(116,24,26);
}

.c0 input,
.c0 textarea {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  border-radius: 5px;
  padding: 10px;
  color: rgb(0,130,155);
  font-size: 13px;
  width: 100%;
}

.c0 input::-webkit-input-placeholder,
.c0 textarea::-webkit-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c0 input::-moz-placeholder,
.c0 textarea::-moz-placeholder {
  color: rgba(0,130,155,0.7);
}

.c0 input:-ms-input-placeholder,
.c0 textarea:-ms-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c0 input::placeholder,
.c0 textarea::placeholder {
  color: rgba(0,130,155,0.7);
}

.c0 input:disabled,
.c0 textarea:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0 textarea {
  width: 100%;
  height: 5em;
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c0 {
    grid-template-columns: 4fr 3fr 3fr;
  }

  .c0 p,
  .c0 label[for="notes"],
  .c0 label[for="description"] {
    grid-column: 1/4;
  }
}

<div
  class="c0"
  data-testid="new-talent"
>
  <label
    for="name"
  >
    <h4>
      Name
    </h4>
    <input
      data-testid="new-talent-name"
      id="name"
      name="name"
      placeholder="Talent's name"
      value=""
    />
  </label>
  <label
    for="activation"
  >
    <h4>
      Activation
    </h4>
    <div
      class="css-1pcexqc-container c1"
      id="activation"
    >
      <div
        class="css-bg1rzq-control activation__control"
      >
        <div
          class="css-1hwfws3 activation__value-container activation__value-container--has-value"
        >
          <div
            class="css-dvua67-singleValue activation__single-value"
          >
            Passive
          </div>
          <div
            class="css-1g6gooi"
          >
            <div
              class="activation__input"
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="react-select-6-input"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class="css-1wy0on6 activation__indicators"
        >
          <span
            class="css-bgvzuu-indicatorSeparator activation__indicator-separator"
          />
          <div
            aria-hidden="true"
            class="css-16pqwjk-indicatorContainer activation__indicator activation__dropdown-indicator"
          >
            <svg
              aria-hidden="true"
              class="css-19bqh2r"
              focusable="false"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="activation"
        type="hidden"
        value="Passive"
      />
    </div>
  </label>
  <div>
    <label
      for="tier"
    >
      <h4>
        Tier
      </h4>
      <div
        class="css-1pcexqc-container c2"
        id="tier"
      >
        <div
          class="css-bg1rzq-control tier__control"
        >
          <div
            class="css-1hwfws3 tier__value-container tier__value-container--has-value"
          >
            <div
              class="css-dvua67-singleValue tier__single-value"
            >
              1
            </div>
            <div
              class="css-1g6gooi"
            >
              <div
                class="tier__input"
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="react-select-7-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class="css-1wy0on6 tier__indicators"
          >
            <span
              class="css-bgvzuu-indicatorSeparator tier__indicator-separator"
            />
            <div
              aria-hidden="true"
              class="css-16pqwjk-indicatorContainer tier__indicator tier__dropdown-indicator"
            >
              <svg
                aria-hidden="true"
                class="css-19bqh2r"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
        <input
          name="tier"
          type="hidden"
          value="1"
        />
      </div>
    </label>
    <label
      class="c3"
      data-testid="new-talent-ranked"
      name="ranked"
    >
      <input
        name="ranked"
        type="checkbox"
      />
      <span>
        ranked
      </span>
    </label>
  </div>
  <label
    for="description"
  >
    <h4>
      Description
    </h4>
    <textarea
      data-testid="new-talent-description"
      id="description"
      name="description"
      placeholder="Add description"
    />
  </label>
</div>
`;

exports[`Storyshots Components/Talent player 1`] = `
.c0 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 12px;
  padding: 12px;
}

.c0 > div {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 h4,
.c0 p {
  margin: 0;
  color: rgb(0,130,155);
}

.c0 p,
.c0 textarea {
  text-align: justify;
}

.c0 h4 {
  text-shadow: 1px 1px rgb(234,242,246);
}

.c0 h4:nth-child(2) {
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
}

.c0 h4:nth-child(3) {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 p > span {
  font-family: "GenesysSymbols",Times New Roman,serif;
  color: rgb(0,0,0);
}

.c0 p > span[type=boost] {
  color: rgb(167,218,243);
}

.c0 p > span[type=ability] {
  color: rgb(78,171,83);
}

.c0 p > span[type=proficiency] {
  color: rgb(255,240,61);
}

.c0 p > span[type=difficulty] {
  color: rgb(81,42,124);
}

.c0 p > span[type=challenge] {
  color: rgb(116,24,26);
}

.c0 input,
.c0 textarea {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  border-radius: 5px;
  padding: 10px;
  color: rgb(0,130,155);
  font-size: 13px;
  width: 100%;
}

.c0 input::-webkit-input-placeholder,
.c0 textarea::-webkit-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c0 input::-moz-placeholder,
.c0 textarea::-moz-placeholder {
  color: rgba(0,130,155,0.7);
}

.c0 input:-ms-input-placeholder,
.c0 textarea:-ms-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c0 input::placeholder,
.c0 textarea::placeholder {
  color: rgba(0,130,155,0.7);
}

.c0 input:disabled,
.c0 textarea:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0 textarea {
  width: 100%;
  height: 5em;
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c0 {
    grid-template-columns: 4fr 3fr 2fr;
  }

  .c0 p,
  .c0 label[for="notes"],
  .c0 label[for="description"] {
    grid-column: 1/4;
  }
}

<div
  class="c0"
  data-testid="talent-dedication"
>
  <h4
    data-testid="talent-dedication-name"
  >
    Dedication
  </h4>
  <h4
    data-testid="talent-dedication-activation"
  >
    Passive
  </h4>
  <h4
    data-testid="talent-dedication-rank"
  >
    Rank:
     
    2
  </h4>
  <p
    data-testid="talent-dedication-description"
  >
    Each rank of Dedication increases one of your character's characteristics by one. This talent cannot increase a characteristic above 5. You cannot increase the same characteristic with Dedication twice.
  </p>
  <p
    data-testid="talent-dedication-notes"
  >
    Brawl
Cunning
  </p>
</div>
`;
